footer added & some class id name change

--- a/index.html
+++ b/index.html
@@ -13,103 +13,114 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <!-- 1st area START  -->
-    <section class="main-area">  
-        <div class="child-area top-child-position">
-            <div id="top-tittle-border">
-                <h1 class="top-area-tittle-text">Stay Focused on
-                    <br><span class="text-highlight"> Mission 2022</span>
-                </h1>
+    <section class="all-area">
+        <!-- 1st area START  -->
+        <section class="main-area">  
+            <div class="child-area top-child-position">
+                <div id="top-tittle-border">
+                    <h1 class="top-area-tittle-text">Stay Focused on
+                        <br><span class="text-highlight"> Mission 2022</span>
+                    </h1>
+                </div>
+                <p class="area-detail-texts">
+                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+                </p>
+                <br>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
+                    Explore Now
+                </a>
+                <br>
+                <br>
+                <p>Scroll down to explore more about us
+                </p>
             </div>
-            <p class="area-detail-texts">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
-            </p>
-            <br>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
-                Explore Now
-            </a>
-            <br>
-            <br>
-            <p>Scroll down to explore more about us
-            </p>
-        </div>
-        <div class="child-area">
-            <img src="img/person-2.png" alt="">
-        </div>
-    </section>
-    <!-- 1st area END  -->
+            <div class="child-area">
+                <img src="img/person-2.png" alt="">
+            </div>
+        </section>
+        <!-- 1st area END  -->
 
-    <!-- 2nd area START  -->
-    <section>
-        <h1 class="section-tittle mission-area-heading">
-            My Mission in 
-            <span class="text-highlight">2022</span>
+        <!-- 2nd area START  -->
+        <section>
+            <h1 class="section-tittle mission-area-heading">
+                My Mission in 
+                <span class="text-highlight">2022</span>
+            </h1>
+
+            <div class="main-area mission-area-main">
+                <div id="child-bg-1" class="mission-area-child">
+                    <img src="img/illustrator-1.png" alt="">
+                    <h1>Mission</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div id="child-bg-2" class="mission-area-child">
+                    <img src="img/illustrator-2.png" alt="">
+                    <h1>Vission</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div id="child-bg-3" class="mission-area-child">
+                    <img src="img/illustrator-3.png" alt="">
+                    <h1>Goals</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- 2nd area END  -->
+
+        <!-- 3rd area START  -->
+        <section class="main-area">
+            <div class="child-area">
+                <img src="img/coding.png" alt="">
+            </div>
+            <div class="child-area child-area-detials">
+            <h1 class="section-tittle">Develop 
+                <br>
+                Without Limits</h1>
+                <p  class="area-detail-texts">
+                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
+                </p>
+                <br>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
+                    Read the  Documentation
+                </a>
+            </div>
+        </section>
+        <!-- 3rd area END  -->
+
+        <!-- 3rd area START  -->
+        <section class="main-area">
+            <div class="child-area child-area-detials">
+            <h1 class="section-tittle">Know our
+                <br>
+                Global Community</h1>
+                <p  class="area-detail-texts">
+                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
+                </p>
+                <br>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
+                    Read the  Documentation
+                </a>
+            </div>
+            <div class="child-area">
+                <img src="img/project.png" alt="">
+            </div>
+        </section>
+        <!-- 3rd area END  -->
+    </section>
+
+    <footer class="footer">
+        <h1 class="footer-heading"><span>Mission</span> <span class="text-highlight">2022</span>
         </h1>
-
-        <div class="main-area mission-area-main">
-            <div id="child-bg-1" class="mission-area-child">
-                <img src="img/illustrator-1.png" alt="">
-                <h1>Mission</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-            </div>
-            <div id="child-bg-2" class="mission-area-child">
-                <img src="img/illustrator-2.png" alt="">
-                <h1>Vission</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-            </div>
-            <div id="child-bg-3" class="mission-area-child">
-                <img src="img/illustrator-3.png" alt="">
-                <h1>Goals</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-            </div>
-        </div>
-
-    </section>
-    <!-- 2nd area END  -->
-
-    <!-- 3rd area START  -->
-    <section class="main-area">
-        <div class="child-area">
-            <img src="img/coding.png" alt="">
-        </div>
-        <div class="child-area child-area-detials">
-           <h1 class="section-tittle">Develop 
-               <br>
-            Without Limits</h1>
-            <p  class="area-detail-texts">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
-            </p>
-            <br>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
-                Read the  Documentation
-            </a>
-        </div>
-    </section>
-    <!-- 3rd area END  -->
-
-    <!-- 3rd area START  -->
-    <section class="main-area">
-        <div class="child-area child-area-detials">
-           <h1 class="section-tittle">Know our
-               <br>
-            Global Community</h1>
-            <p  class="area-detail-texts">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
-            </p>
-            <br>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
-                Read the  Documentation
-            </a>
-        </div>
-        <div class="child-area">
-            <img src="img/project.png" alt="">
-        </div>
-    </section>
-    <!-- 3rd area END  -->
-
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 
 </html>
