extra section added

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -114,6 +114,18 @@
             </div>
         </section>
         <!-- 3rd area END  -->
+    </section>
+
+    <section class="contact-section">
+        <div class="contact-section-div">
+            <h2 class="section-tittle">Contacts Me</h2>
+            <h4>California, United States</h4>
+            <h4>213582474, 7145219164</h4>
+            <br>
+            <a class="link-button" target="_blank" href="#">
+                Whats App
+            </a>
+        </div>
     </section>
 
     <footer class="footer">
