all done and final push

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -30,11 +29,15 @@
                     </h1>
                 </div>
                 <p class="area-detail-texts">
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+                    Hello This Is <span id="author-name-style" class="text-highlight">Mr.X</span>
+                    <br>
+                    I get something big So I stay focused on <span class="text-highlight">MISSION 2022</span>.
+                    <br>
+                    If you know more details, read my website articles.
                 </p>
                 <br>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
-                    Explore Now
+                    Explore Me
                 </a>
                 <br>
                 <br>
@@ -53,25 +56,23 @@
                 My Mission in 
                 <span class="text-highlight">2022</span>
             </h1>
-
             <div class="main-area mission-area-main">
                 <div id="child-bg-1" class="mission-area-child">
                     <img src="img/illustrator-1.png" alt="">
                     <h1>Mission</h1>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <p>This year I want to be a frontend developer. So I already started learning and practicing already.I start my mission 2022 1st Day in this year.Please for me to done my mission.</p>
                 </div>
                 <div id="child-bg-2" class="mission-area-child">
                     <img src="img/illustrator-2.png" alt="">
                     <h1>Vission</h1>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <p>The first step is to start learning some of the fundamental skills that front end developers use on a day-to-day basis. Let’s take a look at what I need to learn.</p>
                 </div>
                 <div id="child-bg-3" class="mission-area-child">
                     <img src="img/illustrator-3.png" alt="">
                     <h1>Goals</h1>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <p>The goal of a front end developer is to implement the requested design based on the requirements provided on the specified devices for the supported browsers.</p>
                 </div>
-            </div>
-
+            </div> 
         </section>
         <!-- 2nd area END  -->
 
@@ -81,11 +82,11 @@
                 <img src="img/coding.png" alt="">
             </div>
             <div class="child-area child-area-detials">
-            <h1 class="section-tittle">Develop 
+            <h1 class="section-tittle">Front End
                 <br>
-                Without Limits</h1>
+                Developers Skills</h1>
                 <p  class="area-detail-texts">
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
+                    Front end web developers use three primary coding languages to code the website and web app designs created by web designers: 1.HTML 2.CSS 3.JavaScript
                 </p>
                 <br>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
@@ -98,11 +99,12 @@
         <!-- 3rd area START  -->
         <section class="main-area">
             <div class="child-area child-area-detials">
-            <h1 class="section-tittle">Know our
+            <h1 class="section-tittle">Font end developers
                 <br>
-                Global Community</h1>
+                in demand in 2022 ?</h1>
                 <p  class="area-detail-texts">
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum. 
+                    Front end developer jobs are some of the most in-demand roles, and for good reason — we wouldn't get to enjoy Internet black holes without them!
+                    In a 2020 Stack Overflow survey,front end developers in the United States made an average of $110,000 per year.
                 </p>
                 <br>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdalamintkg2003/">
